# uam

./: README.md  cross_switch.txt  meson.build  meson_options.txt
docs/: SPIRV_SUPPORT.md
mesa-imported/codegen/: nv50_ir_from_spirv.cpp
source/: compiler_iface.cpp  compiler_iface.h  glsl_frontend.cpp  glsl_frontend.h  glslang_frontend.cpp  glslang_frontend.h  main.cpp  meson.build  spirv_frontend.cpp  spirv_frontend.h  uam.cpp  uam.h
tests/: shader_deqp_define_broken_transpiler.frag  shader_deqp_define_value_and_function.frag  shader_deqp_define_value_and_function_460.frag  shader_deqp_define_value_and_function_EXACT.frag  shader_deqp_func_float_float.frag  shader_deqp_func_float_vec2.frag  shader_deqp_inout_param.frag  shader_deqp_multi_output.frag  shader_test_1_simple.frag  shader_test_1_simple.vert  shader_test_2_funccall.frag  shader_test_3_uniforms.frag  shader_test_4_nested_funccall.frag  shader_test_5_branching_func.frag  shader_test_6_deqp_pattern.frag  shader_test_6_deqp_pattern.vert  shader_test_7_matrix_funcs.frag  shader_test_8_multi_return.frag  shader_test_9_void_func.frag  test_spirv_parser.cpp
