option('build_mode', type: 'combo', choices: ['lib', 'exe', 'both'], value: 'both',
       description: 'Build targets: lib (static library only), exe (CLI executable only), both')
option('glslang_root', type: 'string', value: '',
       description: 'Path to glslang source directory (sources compiled into uam)')
